#-------------------------------------------------------------------
# This file is part of a CMake build system designed for GUCEF
#     (Galaxy Unlimited Framework)
# For the latest info, see http://www.VanvelzenSoftware.com/
#
# The contents of this file are placed in the public domain. Feel
# free to make use of it in any way you like.
#-------------------------------------------------------------------
#

# Configure gucefCOM

set(HEADER_FILES 
  include/CDBColumn.h
  include/CDBField.h
  include/CDBQuery.h
  include/CGUCEFCOMModule.h
  include/CHTTPClient.h
  include/CHTTPURLHandler.h
  include/CMySQLClient.h
  include/CMySQLClientInterface.h
  include/CPHUDPSocket.h
  include/gucefCOM.h
  include/gucefCOMDLLInit.h
  include/gucefCOM_CDefaultHTTPServerRouterController.h
  include/gucefCOM_CHTTPServer.h
  include/gucefCOM_CIHTTPServerResource.h
  include/gucefCOM_CIHTTPServerRouter.h
  include/gucefCOM_CIHTTPServerRouterController.h
  include/gucefCOM_config.h
  include/gucefCOM_ETypes.h
  include/gucefCOM_HTTPCode.h
  include/gucefCOM_macros.h
)

set(SOURCE_FILES 
  src/CDBQuery.cpp
  src/CGUCEFCOMModule.cpp
  src/CHTTPClient.cpp
  src/CHTTPURLHandler.cpp
  src/CMySQLClient.cpp
  src/CPHUDPSocket.cpp
  src/gucefCOM.cpp
  src/gucefCOM_CDefaultHTTPServerRouterController.cpp
  src/gucefCOM_CHTTPServer.cpp
  src/gucefCOM_CIHTTPServerResource.cpp
  src/gucefCOM_CIHTTPServerRouter.cpp
  src/gucefCOM_CIHTTPServerRouterController.cpp
)

# Make sure the PLATFORM_HEADER_FILES variable is always defined
 set( PLATFORM_HEADER_FILES "" )

# Make sure the PLATFORM_SOURCE_FILES variable is always defined
 set( PLATFORM_SOURCE_FILES "" )

# For ease of use make a variable that has all files for this module
set( ALL_FILES ${HEADER_FILES} ${SOURCE_FILES} ${PLATFORM_HEADER_FILES} ${PLATFORM_SOURCE_FILES} )




#******** END OF AUTOGENERATED CONTENT ********



add_library( gucefCOM ${HEADER_FILES} ${SOURCE_FILES} )
add_dependencies( gucefCOM gucefCOMCORE gucefCORE gucefMT)
target_link_libraries( gucefCOM gucefCOMCORE gucefCORE gucefMT )
set_target_properties( gucefCOM PROPERTIES COMPILE_DEFINITIONS GUCEFCOM_BUILD_MODULE )
GUCEF_config_lib( gucefCOM )


#******** START OF AUTOGENERATED CONTENT ********



include_directories( ../gucefCOMCORE/include ../gucefCORE/include ../gucefMT/include include )

if ( UNIX )
  include_directories( ../gucefCORE/include/linux )
endif( UNIX )

if ( WIN32 )
  include_directories( ../gucefCOMCORE/include/mswin ../gucefCORE/include/mswin )
endif( WIN32 )

if ( WIN64 )
  include_directories( ../gucefCOMCORE/include/mswin ../gucefCORE/include/mswin )
endif( WIN64 )



#******** END OF AUTOGENERATED CONTENT ********


