#-------------------------------------------------------------------
# This file is part of a CMake build system designed for GUCEF
#     (Galaxy Unlimited Framework)
# For the latest info, see http://www.VanvelzenSoftware.com/
#
# The contents of this file are placed in the public domain. Feel
# free to make use of it in any way you like.
#-------------------------------------------------------------------
#

# Configure gucefMT

set(HEADER_FILES 
  include/gucefMT.h
  include/gucefMT_basicMacros.h
  include/gucefMT_CActiveObject.h
  include/gucefMT_CCondition.h
  include/gucefMT_CCriticalSection.h
  include/gucefMT_CGUCEFMTModule.h
  include/gucefMT_CICloneable.h
  include/gucefMT_CMutex.h
  include/gucefMT_config.h
  include/gucefMT_CReadWriteLock.h
  include/gucefMT_CScopeMutex.h
  include/gucefMT_CSemaphore.h
  include/gucefMT_CTMailBox.h
  include/gucefMT_dvmtoswrap.h
  include/gucefMT_DVRWLOCK.h
  include/gucefMT_ETypes.h
  include/gucefMT_macros.h
  include/gucefMT_mutex.h
)

set(SOURCE_FILES 
  src/gucefMT.cpp
  src/gucefMT_CActiveObject.cpp
  src/gucefMT_CCondition.cpp
  src/gucefMT_CCriticalSection.cpp
  src/gucefMT_CGUCEFMTModule.cpp
  src/gucefMT_CICloneable.cpp
  src/gucefMT_CMutex.cpp
  src/gucefMT_CReadWriteLock.cpp
  src/gucefMT_CScopeMutex.cpp
  src/gucefMT_CSemaphore.cpp
  src/gucefMT_CTMailBox.cpp
  src/gucefMT_dvmtoswrap.c
  src/gucefMT_DVRWLOCK.c
  src/gucefMT_MUTEX.c
)

# Make sure the PLATFORM_HEADER_FILES variable is always defined
 set( PLATFORM_HEADER_FILES "" )

# Make sure the PLATFORM_SOURCE_FILES variable is always defined
 set( PLATFORM_SOURCE_FILES "" )

# For ease of use make a variable that has all files for this module
set( ALL_FILES ${HEADER_FILES} ${SOURCE_FILES} ${PLATFORM_HEADER_FILES} ${PLATFORM_SOURCE_FILES} )




#******** END OF AUTOGENERATED CONTENT ********



add_library( gucefMT ${HEADER_FILES} ${SOURCE_FILES} )

# Add system specific libraries
if (WIN32)
  set( PLATFORM_LIBS Winmm.lib )
  target_link_libraries( gucefMT ${PLATFORM_LIBS} )
endif()

set_target_properties( gucefMT PROPERTIES COMPILE_DEFINITIONS GUCEFMT_BUILD_MODULE )

GUCEF_config_lib( gucefMT )



#******** START OF AUTOGENERATED CONTENT ********



include_directories( include )



#******** END OF AUTOGENERATED CONTENT ********


