INCLUDES = -I../include -I../../common/include
lib_LTLIBRARIES=libgucefMT.la

libgucefMT_la_SOURCES = gucefMT.cpp \
                        gucefMT_CActiveObject.cpp \
                        gucefMT_CCondition.cpp \
                        gucefMT_CCriticalSection.cpp \
                        gucefMT_CGUCEFMTModule.cpp \
                        gucefMT_CICloneable.cpp \
                        gucefMT_CMutex.cpp \
                        gucefMT_CReadWriteLock.cpp \
                        gucefMT_CScopeMutex.cpp \
                        gucefMT_CSemaphore.cpp \
                        gucefMT_CTMailBox.cpp \
                        gucefMT_dvmtoswrap.c \
                        gucefMT_DVRWLOCK.c \
                        gucefMT_MUTEX.c