#-------------------------------------------------------------------
# This file is part of a CMake build system designed for GUCEF
#     (Galaxy Unlimited Framework)
# For the latest info, see http://www.VanvelzenSoftware.com/
#
# The contents of this file are placed in the public domain. Feel
# free to make use of it in any way you like.
#-------------------------------------------------------------------
#

# Configure gucefCOMCORE

set(HEADER_FILES 
  include/CCom.h
  include/CGUCEFCOMCOREModule.h
  include/CHostAddress.h
  include/CIPAddress.h
  include/CPing.h
  include/CSocket.h
  include/CTCPClientSocket.h
  include/CTCPConnection.h
  include/CTCPServerConnection.h
  include/CTCPServerSocket.h
  include/CUDPChannel.h
  include/CUDPMasterSocket.h
  include/CUDPSocket.h
  include/dvwinsock.h
  include/gucefCOMCORE.h
  include/gucefCOMCOREDLLInit.h
  include/gucefCOMCORE_config.h
  include/gucefCOMCORE_ETypes.h
  include/gucefCOMCORE_macros.h
  include/socketerrors.h
  include/socketutils.h
)

set(SOURCE_FILES 
  src/CCom.cpp
  src/CGUCEFCOMCOREModule.cpp
  src/CHostAddress.cpp
  src/CIPAddress.cpp
  src/CPing.cpp
  src/CSocket.cpp
  src/CTCPClientSocket.cpp
  src/CTCPConnection.cpp
  src/CTCPServerConnection.cpp
  src/CTCPServerSocket.cpp
  src/CUDPChannel.cpp
  src/CUDPMasterSocket.cpp
  src/CUDPSocket.cpp
  src/dvwinsock.c
  src/gucefCOMCORE.cpp
  src/socketutils.cpp
)



if (WIN32)
  set( PLATFORM_HEADER_FILES 
    include/mswin/gucefCOMCORE_CPingTaskConsumer.h
    include/mswin/gucefCOMCORE_icmpApi.h
  )

  set( PLATFORM_HEADER_INSTALL "WIN32" )
  source_group( "Platform Header Files" FILES ${PLATFORM_HEADER_FILES} )

  set( PLATFORM_SOURCE_FILES 
    src/mswin/gucefCOMCORE_CPingTaskConsumer.cpp
    src/mswin/gucefCOMCORE_icmpApi.cpp
  )

  set( PLATFORM_SOURCE_INSTALL "WIN32" )
  source_group( "Platform Source Files" FILES ${PLATFORM_SOURCE_FILES} )

elseif (WIN64)
  set( PLATFORM_HEADER_FILES 
    include/mswin/gucefCOMCORE_CPingTaskConsumer.h
    include/mswin/gucefCOMCORE_icmpApi.h
  )

  set( PLATFORM_HEADER_INSTALL "WIN64" )
  source_group( "Platform Header Files" FILES ${PLATFORM_HEADER_FILES} )

  set( PLATFORM_SOURCE_FILES 
    src/mswin/gucefCOMCORE_CPingTaskConsumer.cpp
    src/mswin/gucefCOMCORE_icmpApi.cpp
  )

  set( PLATFORM_SOURCE_INSTALL "WIN64" )
  source_group( "Platform Source Files" FILES ${PLATFORM_SOURCE_FILES} )

endif ()

# For ease of use make a variable that has all files for this module
set( ALL_FILES ${HEADER_FILES} ${SOURCE_FILES} ${PLATFORM_HEADER_FILES} ${PLATFORM_SOURCE_FILES} )




#******** END OF AUTOGENERATED CONTENT ********



add_library( gucefCOMCORE ${HEADER_FILES} ${SOURCE_FILES} ${PLATFORM_HEADER_FILES} ${PLATFORM_SOURCE_FILES} )
add_dependencies( gucefCOMCORE gucefCORE gucefMT)
target_link_libraries( gucefCOMCORE gucefCORE gucefMT )
if (WIN32)
  target_link_libraries( gucefCOMCORE Ws2_32.lib Advapi32.lib )
endif()
set_target_properties( gucefCOMCORE PROPERTIES COMPILE_DEFINITIONS GUCEFCOMCORE_BUILD_MODULE )
GUCEF_config_lib( gucefCOMCORE )


#******** START OF AUTOGENERATED CONTENT ********



include_directories( ../gucefCORE/include ../gucefMT/include include )

if ( UNIX )
  include_directories( ../gucefCORE/include/linux )
endif( UNIX )

if ( WIN32 )
  include_directories( ../gucefCORE/include/mswin include/mswin )
endif( WIN32 )

if ( WIN64 )
  include_directories( ../gucefCORE/include/mswin include/mswin )
endif( WIN64 )



#******** END OF AUTOGENERATED CONTENT ********


