#-------------------------------------------------------------------
# This file is part of a CMake build system designed for GUCEF
#     (Galaxy Unlimited Framework)
# For the latest info, see http://www.VanvelzenSoftware.com/
#
# The contents of this file are placed in the public domain. Feel
# free to make use of it in any way you like.
#-------------------------------------------------------------------
#

# Configure gucefDRN

set(HEADER_FILES 
  include/gucefDRN.h
  include/gucefDRN_CDRNData.h
  include/gucefDRN_CDRNDataGroup.h
  include/gucefDRN_CDRNDataGroupProperties.h
  include/gucefDRN_CDRNDataStream.h
  include/gucefDRN_CDRNNode.h
  include/gucefDRN_CDRNPeerLink.h
  include/gucefDRN_CDRNPeerLinkData.h
  include/gucefDRN_CGUCEFDRNModule.h
  include/gucefDRN_CIDRNPeerLinkCrypter.h
  include/gucefDRN_CIDRNPeerValidator.h
  include/gucefDRN_config.h
  include/gucefDRN_DLLInit.h
  include/gucefDRN_DRNProtocol.h
  include/gucefDRN_ETypes.h
  include/gucefDRN_macros.h
)

set(SOURCE_FILES 
  src/gucefDRN.cpp
  src/gucefDRN_CDRNDataGroup.cpp
  src/gucefDRN_CDRNDataGroupProperties.cpp
  src/gucefDRN_CDRNDataStream.cpp
  src/gucefDRN_CDRNNode.cpp
  src/gucefDRN_CDRNPeerLink.cpp
  src/gucefDRN_CDRNPeerLinkData.cpp
  src/gucefDRN_CGUCEFDRNModule.cpp
  src/gucefDRN_CIDRNPeerLinkCrypter.cpp
  src/gucefDRN_CIDRNPeerValidator.cpp
)

# Make sure the PLATFORM_HEADER_FILES variable is always defined
 set( PLATFORM_HEADER_FILES "" )

# Make sure the PLATFORM_SOURCE_FILES variable is always defined
 set( PLATFORM_SOURCE_FILES "" )

# For ease of use make a variable that has all files for this module
set( ALL_FILES ${HEADER_FILES} ${SOURCE_FILES} ${PLATFORM_HEADER_FILES} ${PLATFORM_SOURCE_FILES} )




#******** END OF AUTOGENERATED CONTENT ********



add_library( gucefDRN ${HEADER_FILES} ${SOURCE_FILES} )
add_dependencies( gucefDRN gucefCOM gucefCOMCORE gucefCORE gucefMT)
target_link_libraries( gucefDRN gucefCOM gucefCOMCORE gucefCORE gucefMT )
set_target_properties( gucefDRN PROPERTIES COMPILE_DEFINITIONS GUCEFDRN_BUILD_MODULE )
GUCEF_config_lib( gucefDRN )


#******** START OF AUTOGENERATED CONTENT ********



include_directories( ../gucefCOM/include ../gucefCOMCORE/include ../gucefCORE/include ../gucefMT/include include )

if ( UNIX )
  include_directories( ../gucefCORE/include/linux )
endif( UNIX )

if ( WIN32 )
  include_directories( ../gucefCOMCORE/include/mswin ../gucefCORE/include/mswin )
endif( WIN32 )

if ( WIN64 )
  include_directories( ../gucefCOMCORE/include/mswin ../gucefCORE/include/mswin )
endif( WIN64 )



#******** END OF AUTOGENERATED CONTENT ********


